add statistics section

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~11.2.0",
     "@ionic/angular": "^5.5.2",
     "@mdi/font": "^5.9.55",
+    "chart.js": "^2.9.4",
     "cordova-android": "9.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
