--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
     "@ionic/angular": "^5.5.2",
+    "@ionic/app-scripts": "^3.2.4",
     "@ionic/cli": "^6.13.1",
     "@mdi/font": "^5.9.55",
     "chart.js": "^2.9.4",
@@ -27,7 +28,9 @@
     "express": "^4.17.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "typescript": "~4.0.2"
+
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1101.4",
@@ -56,8 +59,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "tslint": "~6.1.0"
   },
   "description": "An Ionic project",
   "cordova": {
